# FVM_INS_AC

./: .gitattributes  CMakeLists.txt  FVM_INSE.cpp  calculateTimeStep.cpp  functions.cpp  functions.hpp  getMeshData.cpp  gridData.cpp  gridData.hpp  main.cpp  output.cpp  setBound.cpp  setInitialCondition.cpp  solver.cpp  solver.hpp  viscidFlux.cpp
input/: input.txt  mesh1.txt  mesh2.txt  mesh3.txt
output/: mesh3.plt  residue_mesh3.txt
